# lumen

./: LICENSE  README.md  bun.lockb  package.json
src/: appearance.html  edit_block.js  hold.html  htmx+do-once.js  htmx+tauri.js  index.html  pico.classless.css  select_button.js  styles.css  test-choose.html  test-locked.html  test-styles.css  test-wants-to.html  test.html  wants_to.html  wants_to_select.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_image.sh  icon.icns
src-tauri/src/: companion_server.rs  config.rs  display_path.rs  lib.rs  shell_control.rs  templates.rs
src-tauri/src/controllers/: file_controller.rs
src-tauri/src/controllers/file_controller/context/: bin.rs  mod.rs  ruby.rs  rust.rs
src-tauri/templates/companion/: index.html
src-tauri/templates/files/: _column.html  _icon.html  _row.html  _search_preview.html  _search_results.html  index.html
src-tauri/templates/wants_to/: _input.html  index.html
src/sortable/: sortable+citadel.js
