[package]
name = "lumen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "lumen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.20.0"
uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-drag = "2.1.0"
tokio = { version = "1.45.0", features = ["full"] }
include_dir = { version = "0.7.4", features = ["glob"] }
base64 = "0.22.1"
png = "0.17.16"
flate2 = "1.1.2"
zip = "2.2.0"
pulldown-cmark = "0.12.2"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
